force-app/main/default/objects/R360_Calendar_Exception__c/R360_Calendar_Exception__c.object-meta.xml
<CustomObject><deploymentStatus>Deployed</deploymentStatus><description>Holiday, non-working day or capacity override for a Resource 360 calendar.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSharing>true</enableSharing><externalSharingModel>ControlledByParent</externalSharingModel><label>Resource 360 Calendar Exception</label><nameField><displayFormat>CALX-{00000}</displayFormat><label>Exception Number</label><type>AutoNumber</type></nameField><pluralLabel>Resource 360 Calendar Exceptions</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>