force-app/main/default/objects/R360_Calendar_Exception__c/fields/Calendar__c.field-meta.xml
<CustomField><fullName>Calendar__c</fullName><label>Calendar</label><referenceTo>R360_Work_Calendar__c</referenceTo><relationshipLabel>Calendar Exceptions</relationshipLabel><relationshipName>Calendar_Exceptions</relationshipName><reparentableMasterDetail>false</reparentableMasterDetail><type>MasterDetail</type><writeRequiresMasterRead>false</writeRequiresMasterRead></CustomField>