force-app/main/default/objects/R360_Calendar_Exception__c/fields/Capacity_Hours__c.field-meta.xml
<CustomField><fullName>Capacity_Hours__c</fullName><defaultValue>0</defaultValue><label>Capacity Hours</label><precision>4</precision><required>true</required><scale>2</scale><trackHistory>true</trackHistory><type>Number</type></CustomField>