force-app/main/default/objects/R360_Calendar_Exception__c/fields/Exception_Date__c.field-meta.xml
<CustomField><fullName>Exception_Date__c</fullName><label>Exception Date</label><required>true</required><trackHistory>true</trackHistory><type>Date</type></CustomField>