force-app/main/default/objects/R360_Calendar_Exception__c/fields/Exception_Key__c.field-meta.xml
<CustomField><fullName>Exception_Key__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Exception Key</label><length>100</length><required>true</required><type>Text</type><unique>true</unique></CustomField>