force-app/main/default/objects/R360_Calendar_Exception__c/fields/Reason__c.field-meta.xml
<CustomField><fullName>Reason__c</fullName><label>Reason</label><length>255</length><required>true</required><type>Text</type></CustomField>